--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@plugin "daisyui" {
+  themes: cupcake --default;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -19,7 +23,8 @@ body {
 }
 
 @keyframes highlightPulse {
-  0%, 100% {
+  0%,
+  100% {
     opacity: 1;
   }
   50% {
